# vmtest

./: .flake8  .gitignore  .yamllint.yaml  README.md  Taskfile.yml  pyproject.toml  vmtest.py
testcases/alpine/: boot_to_login.py
testcases/alpine/i18n/: en_US.yaml
testcases/solus/: _common.py
testcases/solus/4.6/: install.py
testsuites/alpine/: boot_to_login.yaml
testsuites/solus/4.6/: install.yaml
testsuites/solus/snapshot/: install.yaml
vmtest/: __init__.py  _log.py  _util.py  cli.py  command.py  i18n.py  image.py  keymap.py  runner.py  vm.py
